# bioimage.io

./: .cursorrules  .gitignore  CLAUDE.md  CNAME  README.md  asset-manifest.json  bioimageio-skill-plan.md  index.html  model-artifact-handling-plan.md  model-grid-rework-spec.md  netlify.toml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  precache-manifest.941a2f7a64923092f3134256a42148b2.js  service-worker.js  shavalue_handling.md  site.config.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
css/: app.1dac9869.css
docs/: CODE_OF_CONDUCT.md  README.md  _sidebar.md  _sidebar_new.md  _sidebar_old.md  bioimageio_steering.md  getting_started.md  index.html  model-card-template.md  terms_of_service.md
js/: app.73b20b42.js  app.73b20b42.js.map
outputs/: discard-data-loss-bug.md
public/: .htaccess  CNAME  cellpose_mask_gen.py  colab_service.py  index.html  kernel.worker.js  manifest.json  partners.json  service-worker.js  sw-unregister.js  web-python-kernel.mjs
public/skills/bioengine/bioengine_cli/: __init__.py  __main__.py  apps.py  call.py  cli.py  cluster.py  pyproject.toml  test_cli.py  utils.py
scripts/: bioengine_model_infer.py  bioengine_model_test.py  bioimageio_test_reports.py  convert_id_parts.py  copy-docs.js  fix_download_weights.py  id_parts.json  migrate_collection.py  migrate_collection_at_permission.py  migrate_status_vocabulary.py  publish_to_zenodo.py  resize_cover_images.py  test_model_upload.py
src/: App.test.tsx  App.tsx  App.vue  HyphaContext.tsx  types.ts  (+4 more)
(+298 files in other folders)
